# ui-verifiers

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  HUGGINGFACE_INTEGRATION_SUMMARY.md  HUGGINGFACE_SETUP.md  INTEGRATION_SUMMARY.md  README.md  UV_USAGE.md  launch-server.sh  project_structure.md  pyproject.toml  requirements.txt  setup.py  ui-agent-environments-server.service  ui-verifiers.service  update-gcp-firewall-ip.sh
config/: README.md  __init__.py  default_config.yaml  gcp_training.yaml  multi_vm_distributed.yaml  qwen25_vl_full_finetune.yaml  qwen25_vl_lora.yaml  qwen25_vl_lora_test.yaml
config/algorithms/: ppo.yaml  rejection_sampling.yaml
config/experiments/: lora_ablation_attention_only.yaml  lora_ablation_mlp_only.yaml
docker/: Dockerfile.actor  Dockerfile.trainer
docs/: GCP_SETUP.md
examples/: README.md  train_multi_actor.py  train_qwen25_vl.py  train_qwen2_vl.py
experiments/exp_001_rejection_sampling/: config.yaml
notebooks/: analyze_trajectories.ipynb
proxy/: Dockerfile  Makefile  deploy-proxy.yaml  proxy.py  requirements.txt
scripts/: debug_trajectory.py  eval.py  test_actor_learner.py  test_vm_connection.py  train.py  train_with_config.py
src/: __init__.py
src/actor/: __init__.py  env_client.py  task_runner.py
src/config/: __init__.py  config.py
src/data_utils/: __init__.py  actions_decoder.py  collation.py  trajectory.py
src/learner/: __init__.py  trainer.py
src/learner/algorithms/: __init__.py  base.py  ppo.py  rejection_sampling.py
src/models/: __init__.py  vlm_wrapper.py
src/orchestration/: __init__.py  actor_pool_manager.py  distributed_runner.py  env_pool.py  multi_actor_runner.py  vm_manager.py
src/parsers/: __init__.py  action_decoder.py
src/ui_agent_environments/: core.py
src/ui_agent_environments/simple_data_entry/: server.py  task_manager.py  test.py
src/utils/: __init__.py  checkpoint_utils.py  logging_utils.py
tasks/simple_data_entry/: Dockerfile  Makefile  computer.py  server.py  session.py
tests/: __init__.py  test_action_parser.py  test_algorithms.py  test_integration.py  test_task_runner.py  test_trainer.py  test_trajectory.py
ui_verifiers/: __init__.py  client.py  cluster.py  computer.py  gnome_session.py  server.py  session.py
ui_verifiers/tasks/: __init__.py
ui_verifiers/tasks/simple_data_entry/: Dockerfile  Makefile  server.py  session.py  start.sh  task_manager.py
