[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ui-verifiers"
version = "0.1.0"
description = "Verifiers for RL training of UI Agents"
readme = "README.md"
authors = [{ name = "Tobias Norlund" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Normal runtime dependencies
dependencies = [
  "fastapi>=0.117.1",
  "pandas>=2.3.2",
  "pillow>=11.3.0",
  "playwright>=1.47",
  "python-xlib>=0.33",
  "screeninfo>=0.8.1",
  "uvicorn>=0.37.0",
]

#[project.urls]
# Homepage = ""

[tool.hatch.build.targets.wheel]
packages = ["src/ui_verifiers"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ui_agent_environments"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
